--- a/shoppingbackend/pom.xml
+++ b/shoppingbackend/pom.xml
@@ -57,6 +57,12 @@
 			<version>${spring.version}</version>
 		
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
 
 		<!-- h2 database -->
 		<dependency>
@@ -129,6 +135,8 @@
 		<artifactId>hibernate-validator</artifactId>
 		<version>5.4.1.Final</version>
 		</dependency>
+		
+		
 
 	</dependencies>
 
